gateway/gateway-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: primary
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: kratos.local.dev.outdatedversion.com
    http:
      paths:
      - path: /storage
        backend:
          serviceName: traefik-web-ui
          servicePort: 80
